--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,65 @@
 .App {
   text-align: center;
 }
+.header-color{
+  background: #7b4397;
+  background: -webkit-linear-gradient(to right, #dc2430,#7b4397);
+  background: linear-gradient(to right, #dc2430,#7b4397);
+}
+.beranda-grid{
+  background-color: #7b4397;
+   background: -webkit-linear-gradient(to right,#dc2430, #7b4397) ;
+  background: linear-gradient(to right, #dc2430,#7b4397 ); 
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.avatar-img{
+  padding-top: 5em;
+  /* height: 22%; */
+  border-radius: 80%;
+  width: 15%;
+}
+.banner-text{
+  background-color: black;
+  opacity: .8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+}
+.banner-text h1{
+  font-size: 66px;;
+  font-weight: bold;
+  color: white;
+}
+
+.banner-text hr{
+  border-top: 5px dotted white;
+  width: 50%;
+  margin: auto;
+}
+
+.banner-text p{
+  color:white;
+  font-size: 20px;
+  padding: 1em;
+}
+.social-links{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
+
+.social-links i{
+  color: white;
+  font-size: 5em;
+  padding: 8px;
+}
+
 
 .App-logo {
   height: 40vmin;
